--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,6 +26,7 @@
                 <i class="fa fa-angle-right"></i>
             </a>
             {% endif %}
+            {%- include search.html -%}
         </div>
         <div class="search-searchbar"></div>
         <div class="search-hits"></div>
