--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,7 +37,7 @@
                         <i class="fa fa-angle-right"></i>
                     </a>
                 {% endif %}
-                    
+                {%- include search.html -%}
             </div>
             <script>
             var gitbook = gitbook || [];
