--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<script src="{{site.baseurl}}/gitbook/gitbook.js"></script>
+<!-- <script src="{{site.baseurl}}/gitbook/gitbook.js"></script>
 <script src="{{site.baseurl}}/gitbook/theme.js"></script>
 
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-fontsettings/fontsettings.js"></script>
@@ -6,6 +6,26 @@
 
 
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-lunr/lunr.min.js"></script>
-{% comment %} <script src="{{site.baseurl}}/gitbook/gitbook-plugin-lunr/search-lunr.js"></script>
+ <script src="{{site.baseurl}}/gitbook/gitbook-plugin-lunr/search-lunr.js"></script>
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-search/search-engine.js"></script>
-<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search/search.js"></script> {% endcomment %}
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search/search.js"></script> {% comment %}{% endcomment %} -->
+
+
+
+<script src="{{site.baseurl}}/gitbook/gitbook.js"></script>
+<script src="{{site.baseurl}}/gitbook/theme.js"></script>
+
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-fontsettings/fontsettings.js"></script>
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-sharing/buttons.js"></script>
+
+<!-- <script src="../gitbook/gitbook-plugin-lunr/lunr.min.js"></script>
+<script src="../gitbook/gitbook-plugin-lunr/search-lunr.js"></script>
+<script src="../gitbook/gitbook-plugin-search/search-engine.js"></script>
+<script src="../gitbook/gitbook-plugin-search/search.js"></script> -->
+
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search-pro/jquery.mark.min.js"></script>
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-search-pro/search.js"></script>
+
+<script src="{{site.baseurl}}/gitbook/gitbook-plugin-back-to-top-button/plugin.js"></script>
+
+<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
