--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,13 +21,13 @@
 {%- endif -%}
 
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/style.css">
-<link rel="stylesheet" href="{{site.baseurl}}/gitbook/_search.scss">
+<!-- <link rel="stylesheet" href="{{site.baseurl}}/gitbook/_search.scss">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/algolia.css">
-<link rel="stylesheet" href="{{site.baseurl}}/gitbook/algolia.js">
-<link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-fontsettings/website.css">
+<link rel="stylesheet" href="{{site.baseurl}}/gitbook/algolia.js"> -->
+<!-- <link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-fontsettings/website.css"> -->
 
 <!-- <link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-search/search.css"> -->
-
+<!-- 
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/rouge-highlight-colorful.css">
 
 <meta name="HandheldFriendly" content="true"/>
@@ -36,6 +36,32 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{site.baseurl}}/gitbook/images/apple-touch-icon-precomposed-152.png">
 <link rel="shortcut icon" href="{{site.baseurl}}/gitbook/images/favicon.ico" type="image/x-icon">
+ -->
 
 
 
+
+
+<link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-fontsettings/website.css">
+<link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-search-pro/search.css">
+<link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-back-to-top-button/plugin.css">
+
+<link rel="stylesheet" href="{{site.baseurl}}/gitbook/rouge/{{ site.syntax_highlighter_style }}.css">
+
+<meta name="HandheldFriendly" content="true"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{site.baseurl}}/gitbook/images/apple-touch-icon-precomposed-152.png">
+<link rel="shortcut icon" href="{{site.baseurl}}/gitbook/images/favicon.ico" type="image/x-icon">
+
+<script>
+    MathJax = {
+        tex: {
+            inlineMath: [['$', '$'], ['\\(', '\\)']]
+        },
+        svg: {
+            fontCache: 'global'
+        }
+    };
+</script>
