--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,59 +1,9 @@
-<div class="search-content__inner-wrap">
-    {%- assign search_provider = site.search_provider | default: "algolia" -%}
-    {%- case search_provider -%}
-    {%- when "lunr" -%}
-    <p>lunr</p>
-    <!-- <div id="results" class="results"></div> -->
-    {%- when "google" -%}
-    <p>google</p>
-    <!-- <div id="results" class="results"> -->
-    </div>
-    {%- when "algolia" -%}
-    <div class="search-searchbar"></div>
-    <div class="search-hits"></div>
-    {%- endcase -%}
+<div class="search-results">
+  <div class="has-results">
+      <h1 class="search-results-title"><span class='search-results-count'></span> results matching "<span class='search-query'></span>"</h1>
+      <ul class="search-results-list"></ul>
   </div>
-
-
-  <div class="home">
-
-    {{ content }}
-  
-    <p>
-      This is an example of how you can integrate the 
-      <a href="https://community.algolia.com/jekyll-algolia/">
-        <code>jekyll-algolia</code>
-      </a> plugin into your Jekyll theme.
-    </p>
-  
-    <p>
-      Check out the 
-      <a href="https://github.com/algolia/jekyll-algolia-example">source</a>
-      or 
-      the <a href="https://community.algolia.com/jekyll-algolia/blog.html">tutorial</a> 
-      for more information.
-    </p>
-  
-    <h1 class="page-heading">Posts</h1>
-  
-    <div id="search-searchbar"></div>
-  
-    <div class="post-list" id="search-hits">
-      {% for post in site.posts %}
-        <div class="post-item">
-          {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-          <span class="post-meta">{{ post.date | date: date_format }}</span>
-  
-          <h2>
-            <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-          </h2>
-          <div class="post-snippet">{{ post.excerpt }}</div>
-        </div>
-      {% endfor %}
-    </div>
-  
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-  
+  <div class="no-results">
+      <h1 class="search-results-title">No results matching "<span class='search-query'></span>"</h1>
   </div>
-  
-  {% include algolia.html %}
+</div>
