--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -44,6 +44,14 @@
             <!-- Test 22.03.22 -->
             {% for collection in site.collections %}
                 <!-- <p>{{ collection.label }}</p> -->
+                <li class="chapter active" data-level="1.1">
+                    <a href="{{site.baseurl}}/{{category[0]}}">{{category[0]}}</a>
+                    {% for post in category[1] %}
+                <li class="chapter" data-level="1.1">
+                    <a href="{{site.baseurl}}{{post.url}}">
+                        {{ post.title | escape }}
+                    </a>
+                </li>
                 {% if collection.output %}
                     {% assign reversed_posts = site[collection.label] | reverse %}
 
