--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -1,57 +1,23 @@
 <div class="book-summary">
-
     <div id="book-search-input" role="search">
         <input type="text" placeholder="Type to search" />
     </div>
-
     <nav role="navigation">
-        <!-- 테스트 : 서브 toc -->
         <ul class="summary">
-            <!--  홈 : 타이틀 페이지 -->
             {% if page.url == "/index.html" or page.url == "/" %}
-            <li class="chapter active" data-level="1.2" data-path="{{site.baseurl}}">
-                {% else %}
+            <li class="chapter active" data-level="1.1" data-path="{{site.baseurl}}">
+            {% else %}
             <li class="chapter" data-level="1.1" data-path="{{site.baseurl}}">
-                {% endif %}
-
-                <!-- 하위 목차 -->
-                <a href="{{site.baseurl}}">{{ site.title | escape }}</a>
-            <li><a href="{{site.baseurl}}/category/" target="blank" class="gitbook-link"> categories! </a></li>
-            </li>
-
-            <li class="divider"></li>
-
-            <!-- 상위 출력 -->
-            {% for category in site.categories %}
-            <!-- <p>{{ collection.label }}</p> -->
-            <li class="chapter active" data-level="1.1">
-                <a href="{{site.baseurl}}/{{category[0]}}">{{category[0]}}</a>
-                {% for post in category[1] %}
-            <li class="chapter" data-level="1.1">
-                <a href="{{site.baseurl}}{{post.url}}">
-                    {{ post.title | escape }}
+            {% endif %}
+                <a href="{{site.baseurl}}/">
+                    {{ site.title | escape }}
                 </a>
             </li>
-            {% if site.toc.enabled %}
-            {% if page.url == post.url %}
-            {% include toc.html html=content h_min=site.toc.h_min h_max=site.toc.h_max %}
-            {% endif %}
-            {% endif %}
-            {% endfor %}
-            {% endfor %}
 
             <li class="divider"></li>
-            <!-- Test 22.03.22 -->
+
             {% for collection in site.collections %}
                 <!-- <p>{{ collection.label }}</p> -->
-                <li class="chapter active" data-level="1.1">
-                    <a href="{{site.baseurl}}/{{category[0]}}">{{category[0]}}</a>
-                    {% for post in category[1] %}
-                <li class="chapter" data-level="1.1">
-                    <a href="{{site.baseurl}}{{post.url}}">
-                        {{ post.title | escape }}
-                    </a>
-                </li>
                 {% if collection.output %}
                     {% assign reversed_posts = site[collection.label] | reverse %}
 
@@ -74,17 +40,13 @@
 
                     <li class="divider"></li>
                 {% endif %}
-                {% endfor %}
+            {% endfor %}
+
             <li>
-                <a href="https://www.youtube.com/watch?v=hr2xGbc6jO0&t=286s" target="blank" class="gitbook-link">
-                    이하이!
+                <a href="https://github.com/sighingnow/jekyll-gitbook/fork" target="blank" class="gitbook-link">
+                    Fork it Now!
                 </a>
             </li>
-            <!-- 작업중 : 카테고리 // https://jekyllrb-ko.github.io/docs/pages/ -->
-            <li class="divider"></li>
-
         </ul>
     </nav>
 </div>
-
-
