--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,44 +1,39 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="en" >
+    <head>
 
-<head>
+        {%- include head.html -%}
 
-    {%- include head.html -%}
+        {% assign reversed_posts = site.posts | reverse %}
 
-    {% assign reversed_posts = site.posts | reverse %}
+        {% if reversed_posts %}
+            <link rel="next" href="{{site.baseurl}}{{reversed_posts.first.url}}" />
+        {% endif %}
+    </head>
+    <body>
+        <div class="book">
 
-    {% if reversed_posts %}
-    <link rel="next" href="{{site.baseurl}}{{reversed_posts.first.url}}" />
-    {% endif %}
-</head>
+            {%- include toc-date.html -%}
 
-<body>
-    <div class="book">
+            <div class="book-body">
+                {%- include body.html -%}
 
-        {%- include toc-date.html -%}
-        <div class="book-body">
-            {%- include body.html -%}
+                {% if reversed_posts %}
+                    <a href="{{site.baseurl}}{{reversed_posts.first.url}}" class="navigation navigation-next navigation-unique" aria-label="Next page: {{reversed_posts.first.title}}">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
+                {% endif %}
+            </div>
 
-            {% if reversed_posts %}
-            <a href="{{site.baseurl}}{{reversed_posts.first.url}}" class="navigation navigation-next navigation-unique"
-                aria-label="Next page: {{reversed_posts.first.title}}">
-                <i class="fa fa-angle-right"></i>
-            </a>
-            {% endif %}
-            {%- include search.html -%}
-        </div>
-        <div class="search-searchbar"></div>
-        <div class="search-hits"></div>
-
-        <script>
+            <script>
             var gitbook = gitbook || [];
             gitbook.push(function() {
                 gitbook.page.hasChanged({%- include metadata-home.json.tpl -%});
             });
-        </script>
-    </div>
+            </script>
+        </div>
 
-    {%- include footer.html -%}
-</body>
+        {%- include footer.html -%}
 
+    </body>
 </html>
