--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,7 @@
             });
             </script>
             <script src="https://utteranc.es/client.js"
-                    repo="https://jerrykim91.github.io/jerrykim91.github.io"
+                    repo="https://jerrykim91.github.io/"
                     issue-term="pathname"
                     theme="github-light"
                     crossorigin="anonymous"
