--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -1,3 +1,42 @@
+<style>
+    
+    .modal {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+
+        display: none;
+
+        background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    .modal.show {
+        display: block;
+    }
+
+    .modal_body {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        width: 400px;
+        height: 600px;
+
+        padding: 40px;
+
+        text-align: center;
+
+        background-color: rgb(255, 255, 255);
+        border-radius: 10px;
+        box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
+
+        transform: translateX(-50%) translateY(-50%);
+    }
+</style>
+
 <div class="book-summary">
     <div id="book-search-input" role="search">
         <input type="text" placeholder="Type to search" />
@@ -39,9 +78,23 @@
                     {% endfor %}
 
                     <li class="divider"></li>
+                    
                 {% endif %}
             {% endfor %}
-
+            <li>
+                <form>
+                    <a class="btn-open-popup" type="button">
+                        <input type="button" value="click here">
+                    </a>
+                </form>
+            
+                <div class="modal">
+                    <div class="modal_body">
+                        <h1>Modal</h1>
+                        <h5 style="font-size: 0.7px;">종료- 외부 클릭</h5>
+                    </div>
+                </div>
+            </li>
             <!-- <li>
                 <a href="https://github.com/sighingnow/jekyll-gitbook/fork" target="blank" class="gitbook-link">
                     Fork it Now!
@@ -50,3 +103,32 @@
         </ul>
     </nav>
 </div>
+
+
+<script langauge="javascript">
+
+    //function showPopup(){window.open("popup.html","hey","width=300,height=350", status=no);}
+    // 경로 url , 
+    const body = document.querySelector('body');
+    const modal = document.querySelector('.modal');
+    const btnOpenPopup = document.querySelector('.btn-open-popup');
+
+    btnOpenPopup.addEventListener('click', () => {
+        modal.classList.toggle('show');
+
+        if (modal.classList.contains('show')) {
+            body.style.overflow = 'hidden';
+        }
+    });
+
+    modal.addEventListener('click', (event) => {
+        if (event.target === modal) {
+            modal.classList.toggle('show');
+
+            if (!modal.classList.contains('show')) {
+                body.style.overflow = 'auto';
+            }
+        }
+    });
+
+</script>
