--- a/_includes/body.html
+++ b/_includes/body.html
@@ -27,6 +27,8 @@
                 </div>
 
                 {%- include search.html -%}
+                <!-- 모달창 (테스트) -->
+                {%- include modal.html -%} 
             </div>
         </div>
     </div>
