--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,9 @@
 {%- endif -%}
 
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/style.css">
+<link rel="stylesheet" href="{{site.baseurl}}/gitbook/modal.css">
+
+
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-fontsettings/website.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-search-pro/search.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-back-to-top-button/plugin.css">
