--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -1,4 +1,4 @@
-<style>
+<!-- <style>
     
     .modal {
         position: absolute;
@@ -35,7 +35,7 @@
 
         transform: translateX(-50%) translateY(-50%);
     }
-</style>
+</style> -->
 
 <div class="book-summary">
     <div id="book-search-input" role="search">
@@ -87,13 +87,6 @@
                         <input type="button" value="click here">
                     </a>
                 </form>
-            
-                <div class="modal">
-                    <div class="modal_body">
-                        <h1>Modal</h1>
-                        <h5 style="font-size: 0.7px;">종료- 외부 클릭</h5>
-                    </div>
-                </div>
             </li>
             <!-- <li>
                 <a href="https://github.com/sighingnow/jekyll-gitbook/fork" target="blank" class="gitbook-link">
@@ -105,7 +98,7 @@
 </div>
 
 
-<script langauge="javascript">
+<!-- <script langauge="javascript">
 
     //function showPopup(){window.open("popup.html","hey","width=300,height=350", status=no);}
     // 경로 url , 
@@ -131,4 +124,4 @@
         }
     });
 
-</script>
+</script> -->
