--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,6 +1,18 @@
-<div class="modal">
+<!-- <div class="modal">
     <div class="modal_body">
         <h1>Modal</h1>
         <h5 style="font-size: 0.7px;">종료- 외부 클릭</h5>
     </div>
+</div> -->
+
+
+<div class="search-results">
+
+    <div class="modal">
+        <div class="modal_body">
+            <h1>Modal</h1>
+            <h5 style="font-size: 0.7px;">종료- 외부 클릭</h5>
+        </div>
+    </div>
+
 </div>
