--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,18 +1,8 @@
-<!-- <div class="modal">
+<div class="modal">
     <div class="modal_body">
-        <h1>Modal</h1>
+        <h1>감사합니다.</h1>
+        <img height="32" width="32" src="https://unpkg.com/simple-icons@v6/icons/kakao.svg" />
+
         <h5 style="font-size: 0.7px;">종료- 외부 클릭</h5>
     </div>
-</div> -->
-
-
-<div class="search-results">
-
-    <div class="modal">
-        <div class="modal_body">
-            <h1>Modal</h1>
-            <h5 style="font-size: 0.7px;">종료- 외부 클릭</h5>
-        </div>
-    </div>
-
 </div>
