--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,8 @@
 <script src="../gitbook/gitbook-plugin-search/search-engine.js"></script>
 <script src="../gitbook/gitbook-plugin-search/search.js"></script> -->
 <script src="{{site.baseurl}}/gitbook/modal.js"></script>
+<script src="{{site.baseurl}}/gitbook/modal_btn.js"></script>
+
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-search-pro/jquery.mark.min.js"></script>
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-search-pro/search.js"></script>
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-back-to-top-button/plugin.js"></script>
