--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -2,7 +2,16 @@
     <div class="modal_body">
         <h1>감사합니다.</h1>
         <img height="32" width="32" src="https://unpkg.com/simple-icons@v6/icons/kakao.svg" />
-
-        <h5 style="font-size: 0.7px;">종료- 외부 클릭</h5>
+        <button class="btn">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="text">Test Me!</span>
+          </button>
     </div>
 </div>
