--- a/gitbook/modal.css
+++ b/gitbook/modal.css
@@ -1,4 +1,4 @@
-.modal {
+/* .modal {
     position: absolute;
     top: 0;
     left: 0;
@@ -17,7 +17,7 @@
 
 .modal_body {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
 
     width: 600px;
@@ -31,4 +31,40 @@
     border-radius: 10px;
     box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
 
-    transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%); */
+
+
+    .modal {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+
+        display: none;
+
+        background-color: rgba(233, 227, 227, 0.151);
+    }
+
+    .modal.show {
+        display: block;
+    }
+
+    .modal_body {
+        position: absolute;
+        top: 60%;
+        left: 50%;
+
+        width: 600px;
+        height: 700px;
+
+        padding: 40px;
+
+        text-align: center;
+
+        background-color: rgba(248, 244, 183, 0.842);
+        border-radius: 10px;
+        box-shadow: 0 2px 3px 0 rgba(237, 239, 241, 0.253);
+
+        transform: translateX(-50%) translateY(-50%);
