--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,7 @@
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/style.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/modal.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/modal_btn.css">
+<!-- <link rel="stylesheet" href="{{site.baseurl}}/gitbook/modal_btn.sass"> -->
 
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-fontsettings/website.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/gitbook-plugin-search-pro/search.css">
