--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,17 +1,13 @@
 <div class="modal">
     <div class="modal_body">
-        <h1>감사합니다.</h1>
-        <img height="32" width="32" src="https://unpkg.com/simple-icons@v6/icons/kakao.svg" />
-        <button class="btn">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="text">Test Me!</span>
-          </button>
+        <h1>테스트</h1>
+        <br>
+        <a href="#" class="btn_kakao" type=button>
+            <span>KaKao</span>
+        </a>
+
+        <a href="#" class="btn_toss" type=button>
+            <span>Toss</span>
+        </a>
     </div>
 </div>
