--- a/gitbook/modal.css
+++ b/gitbook/modal.css
@@ -63,7 +63,7 @@
 
         text-align: center;
 
-        background-color: rgba(248, 244, 183, 0.842);
+        background-color: rgb(248, 244, 183);
         border-radius: 10px;
         box-shadow: 0 2px 3px 0 rgba(237, 239, 241, 0.253);
 
