--- a/_includes/body.html
+++ b/_includes/body.html
@@ -28,7 +28,7 @@
 
                 {%- include search.html -%}
                 <!-- 모달창 (테스트) -->
-                {%- include modal.html -%} 
+                <!-- {%- include modal.html -%}  -->
             </div>
         </div>
     </div>
