--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -82,11 +82,18 @@
                 {% endif %}
             {% endfor %}
             <li>
-                <form>
+                <!-- <form>
                     <a class="btn-open-popup" type="button">
-                        <input type="button" value="click here">
+                        <input type="button" value="모달창">
                     </a>
-                </form>
+                </form> -->
+
+                <a href="#" class="btn_kakao" type=button>
+                    <span>☕한잔👉KaKao</span>
+                </a>
+                <a href="#" class="btn_toss" type=button>
+                    <span>☕커피한잔👉Toss</span>
+                </a>
             </li>
             <!-- <li>
                 <a href="https://github.com/sighingnow/jekyll-gitbook/fork" target="blank" class="gitbook-link">
