--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -2,12 +2,18 @@
     <div class="modal_body">
         <h1>테스트</h1>
         <br>
-        <a href="#" class="btn_kakao" type=button>
-            <span>KaKao</span>
+        
+        <h3>KaKao</h3>
+
+        <a href="#" class="btn_kakao" type=button style="max-width: 90%; height: auto;">
+            <span>☕한잔👉KaKao</span>
         </a>
 
-        <a href="#" class="btn_toss" type=button>
-            <span>Toss</span>
+        <h3>Toss</h3>
+
+        <a href="#" class="btn_toss" type=button style="max-width: 90%; height: auto;">
+            <span>☕커피한잔👉Toss</span>
         </a>
+        <!-- 토스 카카오 구분 --> 
     </div>
 </div>
