--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -43,26 +43,19 @@
                     
                 {% endif %}
             {% endfor %}
-            <!-- <li>
-                <form>
-                    <a class="btn-open-popup" type="button">
-                        <input type="button" value="모달창">
-                    </a>
-                </form>
-
-                <a href="#" class="btn_kakao" type=button>
-                    <span>☕한잔👉KaKao</span>
+           
+            <form>
+                <a class="btn_coffee" type="button">
+                    <input type="button" value="☕한잔👇">
                 </a>
-                <a href="#" class="btn_toss" type=button>
-                    <span>☕커피한잔👉Toss</span>
-                </a>
-            </li> -->
-            <a href="#" class="btn_kakao" type=button>
+            </form>
+        
+            <!-- <a href="#" class="btn_kakao" type=button>
                 <span>☕한잔👉KaKao</span>
             </a>
             <a href="#" class="btn_toss" type=button>
                 <span>☕커피한잔👉Toss</span>
-            </a>
+            </a> -->
             <!-- <li>
                 <a href="https://github.com/sighingnow/jekyll-gitbook/fork" target="blank" class="gitbook-link">
                     Fork it Now!
