--- a/_includes/body.html
+++ b/_includes/body.html
@@ -15,20 +15,18 @@
             <div id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-
                         {% if page.title %}
                             <h1 id="{{ page.id }}">{{ page.title | escape }}</h1>
                         {% else %}
                             <h1 id="{{ page.id }}">{{ site.title | escape }}</h1>
                         {% endif %}
-
                         {{ content }}
                     </section>
                 </div>
 
                 {%- include search.html -%}
                 <!-- 모달창 (테스트) -->
-                <!-- {%- include modal.html -%}  -->
+                {%- include modal.html -%} 
             </div>
         </div>
     </div>
