--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,9 @@
 <script src="../gitbook/gitbook-plugin-lunr/search-lunr.js"></script>
 <script src="../gitbook/gitbook-plugin-search/search-engine.js"></script>
 <script src="../gitbook/gitbook-plugin-search/search.js"></script> -->
-<!-- <script src="{{site.baseurl}}/gitbook/modal.js"></script> -->
+
+<!-- modal wind -->
+<script src="{{site.baseurl}}/gitbook/modal.js"></script>
 <!-- <script src="{{site.baseurl}}/gitbook/modal_btn.js"></script> -->
 
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-search-pro/jquery.mark.min.js"></script>
