--- a/gitbook/modal_btn.css
+++ b/gitbook/modal_btn.css
@@ -53,3 +53,28 @@ a:link, a:visited,  a:hover, a:active
     /* color: #000000; */
     text-decoration: none;
 }
+
+.btn_coffee {
+  -webkit-border-radius: 7;
+  -moz-border-radius: 7;
+  border-radius: 7px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 17px;
+  background: #a2beeb; 
+  /* 색미정 */
+  padding: 8px 40px 8px 40px;
+  text-decoration: none;
+
+/* 마진 */
+  margin-top: -30px;
+  margin-right: 10px;
+  margin-bottom: 30px;
+  margin-left: 10px;
+
+}
+
+.btn_coffee:hover {
+  background: #a2beeb;
+  text-decoration: none;
+}
