--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -43,13 +43,18 @@
                     
                 {% endif %}
             {% endfor %}
-           
-            <form>
-                <a class="btn_coffee" type="button">
-                    <input type="button" value="☕한잔👇">
-                </a>
-            </form>
-        
+            <!-- <li>
+                <form>
+                    <a class="btn-open-popup" type="button">
+                        <input type="button" value="커피한잔">
+                    </a>
+                </form>
+            </li> -->
+            <a href="#" class="btn-open-popup.btn_coffee" type=button>
+                <span>☕한잔</span>
+            </a>
+            
+
             <!-- <a href="#" class="btn_kakao" type=button>
                 <span>☕한잔👉KaKao</span>
             </a>
