--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -50,10 +50,11 @@
                     </a>
                 </form>
             </li> -->
-            <a href="#" class="btn-open-popup.btn_coffee" type=button>
-                <span>☕한잔</span>
-            </a>
-            
+            <li>
+                <a href="#" class="btn_coffee" type=button onclick="btn-open-popup">
+                    <span>☕한잔</span>
+                </a>
+            </li>
 
             <!-- <a href="#" class="btn_kakao" type=button>
                 <span>☕한잔👉KaKao</span>
