--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -43,18 +43,16 @@
                     
                 {% endif %}
             {% endfor %}
-            <!-- <li>
-                <form>
+            <li>
+                <form class="btn_coffee">
                     <a class="btn-open-popup" type="button">
-                        <input type="button" value="커피한잔">
+                        <input type="button" value="☕한잔">
                     </a>
                 </form>
-            </li> -->
-            <li>
-                <a href="#" class="btn_coffee" type=button onclick="btn-open-popup">
-                    <span>☕한잔</span>
-                </a>
             </li>
+            <a class="btn_coffee" type=button onclick="btnOpenPopup()">
+                <span>☕한잔</span>
+            </a>
 
             <!-- <a href="#" class="btn_kakao" type=button>
                 <span>☕한잔👉KaKao</span>
