--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -43,16 +43,18 @@
                     
                 {% endif %}
             {% endfor %}
-            <li>
-                <form class="btn_coffee">
-                    <a class="btn-open-popup" type="button">
-                        <input type="button" value="☕한잔">
+            <!-- <li>
+                <button class="btn-open-popup">Modal 띄우기</button>
+
+                <form >
+                    <a class="btn-open-popup" type="button" value="☕한잔">
+                        <!-- <input type="button" value="☕한잔"> -->
                     </a>
                 </form>
-            </li>
-            <a class="btn_coffee" type=button onclick="btnOpenPopup()">
+            </li> -->
+            <!-- <a class="btn_coffee" type=button onclick="btnOpenPopup()">
                 <span>☕한잔</span>
-            </a>
+            </a> -->
 
             <!-- <a href="#" class="btn_kakao" type=button>
                 <span>☕한잔👉KaKao</span>
