--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -43,15 +43,15 @@
                     
                 {% endif %}
             {% endfor %}
-            <!-- <li>
-                <button class="btn-open-popup">Modal 띄우기</button>
+            <li>
+                <!-- <button class="btn-open-popup">Modal 띄우기</button> -->
 
                 <form >
                     <a class="btn-open-popup" type="button" value="☕한잔">
                         <!-- <input type="button" value="☕한잔"> -->
                     </a>
                 </form>
-            </li> -->
+            </li>
             <!-- <a class="btn_coffee" type=button onclick="btnOpenPopup()">
                 <span>☕한잔</span>
             </a> -->
