--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -6,9 +6,9 @@
         <h3>KaKao</h3>
 
         <a href="#" class="btn_kakao" type=button style="max-width: 90%; height: auto;">
-            <span>☕한잔👉KaKao</span>
+            <span>☕커피한잔👉KaKao</span>
         </a>
-
+        <br>
         <h3>Toss</h3>
 
         <a href="#" class="btn_toss" type=button style="max-width: 90%; height: auto;">
