--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -44,13 +44,12 @@
                 {% endif %}
             {% endfor %}
             <li>
-                <!-- <button class="btn-open-popup">Modal 띄우기</button> -->
+                <button class="btn-open-popup">☕한잔</button>
 
-                <form >
+                <!-- <form >
                     <a class="btn-open-popup" type="button" value="☕한잔">
-                        <!-- <input type="button" value="☕한잔"> -->
                     </a>
-                </form>
+                </form> -->
             </li>
             <!-- <a class="btn_coffee" type=button onclick="btnOpenPopup()">
                 <span>☕한잔</span>
