--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -44,12 +44,7 @@
                 {% endif %}
             {% endfor %}
             <li>
-                <button class="btn-open-popup">☕한잔</button>
-
-                <!-- <form >
-                    <a class="btn-open-popup" type="button" value="☕한잔">
-                    </a>
-                </form> -->
+                <a class="btn-open-popup" type="button">☕한잔</a>
             </li>
             <!-- <a class="btn_coffee" type=button onclick="btnOpenPopup()">
                 <span>☕한잔</span>
