--- a/gitbook/modal_btn.css
+++ b/gitbook/modal_btn.css
@@ -1,4 +1,5 @@
-.btn_kakao {
+
+  .btn_kakao {
   -webkit-border-radius: 13;
   -moz-border-radius: 13;
   border-radius: 13px;
@@ -54,7 +55,7 @@ a:link, a:visited,  a:hover, a:active
     text-decoration: none;
 }
 
-.btn_coffee {
+.btn-open-popup {
   -webkit-border-radius: 7;
   -moz-border-radius: 7;
   border-radius: 7px;
