--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -43,9 +43,8 @@
                     
                 {% endif %}
             {% endfor %}
-            <li>
-                <a class="btn-open-popup" type="button">☕한잔</a>
-            </li>
+            <li class="divider"></li>
+            <a class="btn-open-popup" type="button">☕한잔</a>
             <!-- <a class="btn_coffee" type=button onclick="btnOpenPopup()">
                 <span>☕한잔</span>
             </a> -->
