--- a/gitbook/modal_btn.css
+++ b/gitbook/modal_btn.css
@@ -61,10 +61,11 @@ a:link, a:visited,  a:hover, a:active
   border-radius: 7px;
   font-family: Arial;
   color: #ffffff;
-  font-size: 17px;
-  background: #a2beeb; 
+  font-size: 14px;
+  background: #bfbfbf; 
   /* 색미정 */
-  padding: 8px 40px 8px 40px;
+  /* padding: 8px 40px 8px 40px; orgin*/
+  padding: 5px 10px 5px 10px;
   text-decoration: none;
 
 /* 마진 */
@@ -76,6 +77,6 @@ a:link, a:visited,  a:hover, a:active
 }
 
 .btn_coffee:hover {
-  background: #a2beeb;
+  background: #bfbfbf;
   text-decoration: none;
 }
