--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -5,14 +5,14 @@
         
         <h3>KaKao</h3>
 
-        <a href="#" class="btn_kakao" type=button style="max-width: 90%; height: auto;">
-            <span>☕커피한잔👉KaKao</span>
+        <a href="https://qr.kakaopay.com/FYgNkN4wY5dc04496" class="btn_kakao" type=button style="max-width: 90%; height: auto;">
+            <span>☕커피한잔👉KaKao(mobile only)</span>
         </a>
         <br>
         <br>
         <h3>Toss</h3>
 
-        <a href="#" class="btn_toss" type=button style="max-width: 90%; height: auto;">
+        <a href="https://toss.me/jerrykim" class="btn_toss" type=button style="max-width: 90%; height: auto;">
             <span>☕커피한잔👉Toss</span>
         </a>
         <!-- 토스 카카오 구분 --> 
