--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -43,8 +43,7 @@
                     
                 {% endif %}
             {% endfor %}
-            <a class="btn-open-popup" type="button" style="cursor:pointer">☕한잔</a>
-            <li class="divider"></li>
+            <!-- <li class="divider"></li> -->
 
             <!-- <a class="btn_coffee" type=button onclick="btnOpenPopup()">
                 <span>☕한잔</span>
