--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,7 @@
 {%- endif -%}
 
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/style.css">
+<link rel="stylesheet" href="{{site.baseurl}}/gitbook/custom.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/modal.css">
 <link rel="stylesheet" href="{{site.baseurl}}/gitbook/modal_btn.css">
 
