--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,20 +1,29 @@
 <div class="modal">
     <div class="modal_body">
-        <h1>테스트</h1>
+        <br>
+        <h1>☕커피 한잔☕</h1>
         <br>
         
         <h3>KaKao</h3>
 
         <a href="https://qr.kakaopay.com/FYgNkN4wY5dc04496" class="btn_kakao" type=button style="max-width: 90%; height: auto;">
-            <span>☕커피한잔👉KaKao(mobile only)</span>
+            <span>👉KaKao(mobile only)</span>
         </a>
+        <br>
         <br>
         <br>
         <h3>Toss</h3>
 
         <a href="https://toss.me/jerrykim" class="btn_toss" type=button style="max-width: 90%; height: auto;">
-            <span>☕커피한잔👉Toss</span>
+            <span>👉Toss</span>
         </a>
+
+        <br>
+        <br>
+        <br>
+
         <!-- 토스 카카오 구분 --> 
+        <h3>당신의 따뜻한 커피 한잔이 힘이 됩니다.</h3>
+        <h3>감사합니다.</h3>
     </div>
 </div>
