--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,10 +10,23 @@
 <script src="../gitbook/gitbook-plugin-search/search.js"></script> -->
 
 <!-- modal wind -->
-<script src="{{site.baseurl}}/gitbook/modal.js"></script>
 <!-- <script src="{{site.baseurl}}/gitbook/modal_btn.js"></script> -->
 
+
+<script src="{{site.baseurl}}/gitbook/modal.js"></script>
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-search-pro/jquery.mark.min.js"></script>
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-search-pro/search.js"></script>
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-back-to-top-button/plugin.js"></script>
 <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+
+
+
+{%- if site.tracker -%}
+    <!-- trackers -->
+
+    {%- if site.tracker.google_analytics -%}
+        <!-- google analytics -->
+        {%- include google-analytics.html -%}
+    {%- endif -%}
+
+{%- endif -%}
