--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -24,7 +24,7 @@
                 <!-- 하위 목차 -->
                 <!-- <a href="{{site.baseurl}}" style="color: inherit;">{{ site.title | escape }}</a> -->
                 <a href="{{site.baseurl}}" style="color: inherit; font-weight: bold;">🏡 HOME</a>
-                <a href="{{site.baseurl}}/about/" style="color: inherit; font-weight: bold;" target="_blank">🖐 AboutMe</a>
+                <a href="{{site.baseurl}}/Intro/about/" style="color: inherit; font-weight: bold;" target="_blank">🖐 AboutMe</a>
                 <a href="https://jerrykim91.github.io/PortfolioPage/" style="color: inherit; font-weight: bold;" target="_blank">👩‍💻 PortfolioPage</a>
                 
                 <!-- <a href="https://github.com/jerrykim91" style="color: inherit; font-weight: bold;" target="_blank">👩‍💻 Github</a> -->
@@ -56,11 +56,13 @@
                         {% endif %}
 
                         {% if collection.label != "posts" %}
-                            <a href="{{site.baseurl}}{{post.url}}" style="color: inherit;">
-                                {{ post.title | escape }}
-                            </a>
+                            {% if collection.label != "Intro" %}
+                                <a href="{{site.baseurl}}{{post.url}}" style="color: inherit;">
+                                    {{ post.title | escape }}
+                                </a>
+                            {% endif %}
                         {% endif %}
-
+                        
                         {% if site.toc.enabled %}
                             {% if page.url == post.url %}
                                 {% include toc.html html=content h_min=site.toc.h_min h_max=site.toc.h_max %}
@@ -73,46 +75,6 @@
                 <br>
             {% endfor %}
 
-<!-- 
-            {% for category in site.categories %}
-                    <li class="chapter active"  data-level="1.2" >
-                        <a href="{{site.baseurl}}/{{category[0]}}" style="text-decoration: none; text-shadow: 0 0 20px;">{{category[0]}}</a>
-                    </li>
-                    
-                {% for post in category[1] %}
-                    <li class="chapter" data-level="1.1" >
-                        <a href="{{site.baseurl}}{{post.url}}" style="text-decoration:none">
-                            {{ post.title | escape }}
-                        </a>
-                    </li>
-                        {% if site.toc.enabled %}
-                            {% if page.url == post.url %}
-                                {% include toc.html html=content h_min=site.toc.h_min h_max=site.toc.h_max %}
-                            {% endif %}
-                        {% endif %}
-
-                {% endfor %}
-                <br>
-            {% endfor %} -->
-            <!-- <br> -->
-            <!-- <li class="divider"></li> -->
-
-            <!-- <a class="btn_coffee" type=button onclick="btnOpenPopup()">
-                <span>☕한잔</span>
-            </a> -->
-
-            <!-- <a href="#" class="btn_kakao" type=button>
-                <span>☕한잔👉KaKao</span>
-            </a>
-            <a href="#" class="btn_toss" type=button>
-                <span>☕커피한잔👉Toss</span>
-            </a> -->
-            <!-- <li>
-                <a href="https://github.com/sighingnow/jekyll-gitbook/fork" target="blank" class="gitbook-link">
-                    Fork it Now!
-                </a>
-            </li> -->
-            <!-- <a class="btn-open-popup" type="button" style="cursor:pointer">☕한잔</a> -->
             <br>
 
             &nbsp; <a class="btn-open-popup" type="button" style="cursor:pointer">&nbsp; ☕ 커피 한잔 👉 &nbsp;</a>
