--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -24,7 +24,7 @@
                 <!-- 하위 목차 -->
                 <!-- <a href="{{site.baseurl}}" style="color: inherit;">{{ site.title | escape }}</a> -->
                 <a href="{{site.baseurl}}" style="color: inherit; font-weight: bold;">🏡 HOME</a>
-                <a href="{{site.baseurl}}/about/" style="color: inherit; font-weight: bold;" target="_blank">🖐 AboutMe</a>
+                <a href="{{site.baseurl}}/About/" style="color: inherit; font-weight: bold;" target="_blank">🖐 AboutMe</a>
                 <a href="https://jerrykim91.github.io/PortfolioPage/" style="color: inherit; font-weight: bold;" target="_blank">👩‍💻 PortfolioPage</a>
                 
                 <!-- <a href="https://github.com/jerrykim91" style="color: inherit; font-weight: bold;" target="_blank">👩‍💻 Github</a> -->
