Enable better search experiences on mobile devices.

--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -9,10 +9,18 @@
 
 
 <div class="book-summary">
-    <div id="book-search-input" role="search">
+    <!-- <div id="book-search-input" role="search">
         <input type="text" placeholder="Type to search" />
-    </div>
+    </div> -->
     <nav role="navigation">
+        <!-- search : 추가 22.05.01 -->
+        <div id="book-search-input" role="search">
+            <input type="text" placeholder="Type to search" />
+        </div>
+        <div id="book-search-input-link" role="search">
+            <a href="{{site.baseurl}}/search.html">Click to Search</a>
+        </div>
+
         <!-- 테스트 : 서브 toc -->
         <ul class="summary">
             <!--  홈 : 타이틀 페이지 -->
@@ -79,7 +87,7 @@
 
             <br>
 
-            &nbsp; <a class="btn-open-popup" type="button" style="cursor:pointer">&nbsp; ☕ 커피 한잔 👉 &nbsp;</a>
+            <!-- &nbsp; <a class="btn-open-popup" type="button" style="cursor:pointer">&nbsp; ☕ 커피 한잔 👉 &nbsp;</a> -->
             
         </ul>
         <br>
