--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,9 @@
 <script src="{{site.baseurl}}/gitbook/gitbook-plugin-back-to-top-button/plugin.js"></script>
 <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 
-
+<!-- adsense add : 22.05.01 -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1203356691924162"
+     crossorigin="anonymous"></script>
 
 {%- if site.tracker -%}
     <!-- trackers -->
