--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -18,7 +18,7 @@
             <input type="text" placeholder="Type to search" />
         </div>
         <div id="book-search-input-link" role="search">
-            <a href="{{site.baseurl}}/search.html">Click to Search</a>
+            <a href="{{site.baseurl}}/search.html"><i class="fa-solid fa-magnifying-glass">   Search</i></a>
         </div>
 
         <!-- 테스트 : 서브 toc -->
